# simpsonsarcade

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
config/: simpsons.toml  simpsons_rexglue.toml  simpsons_switch_tables.toml  simpsons_switch_tables_gen.toml
docs/: binary-analysis.md  speed-fix.md  xenonrecomp-workflow.md
ppc/: ppc_config.h  ppc_detail.h
project/: CMakeLists.txt
project/src/: keyboard_driver.cpp  keyboard_driver.h  main.cpp  simpsons_menu.cpp  simpsons_menu.h  simpsons_settings.cpp  simpsons_settings.h  stubs.cpp  test_boot.cpp
scripts/: extract_switch_tables.py
src/: kernel_stubs.cpp  main.cpp  memory.cpp  memory.h  xex_loader.cpp  xex_loader.h
tools/: dump_pe.cpp  extract_pe.py  extract_stfs.py  find_abi_addrs.py  find_missing_vtable_funcs.py  lzx_decompress.py
tools/patches/: xenonrecomp-altivec-vmx.patch  xenonrecomp-missing-instructions.patch
